# ask-question-get-answer-api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_11_13_2310-3a4cdb1904ed_add_answer_and_question_models_for_.py  2025_11_16_1540-ae3a2fdffbe4_add_users_model.py
src/: main.py
src/app/: app.py
src/app/routers/: __init__.py
src/app/routers/api/: __init__.py  answer.py  question.py
src/app/schemas/: __init__.py  answer.py  question.py
src/app/services/: __init__.py  answer_service.py  question_service.py
src/core/: __init__.py  config.py  db_helper.py  mixins.py
src/core/models/: __init__.py  answer.py  question.py
src/users/: __init__.py  auth.py
src/users/dependencies/: __init__.py  backend.py  fastapi_users.py  strategy.py  user_manager.py  users.py
src/users/models/: __init__.py  user.py
tests/: conftest.py  test_answers.py  test_questions.py  utils.py
users/models/: user.py
